# peg-vm-typing

./: .hs  CHANGELOG.md  Constr.smt  flake.nix  peg.cabal
src/: Compiler.hs  PEGLexer.x  PEGParser.hs  PEGParser.y  PEGTypeInfer.hs  ParserExpression.hs  VM.hs
test/: Example1.peg  Example1.smt  Example1.txt  Example1.vm
test/data/PegBenchGen/: BenchGen.rkt
test/data/PegBenchGen/grammars/: grm_1.txt  grm_2.txt  grm_3.txt  grm_4.txt  grm_5.txt  grm_6.txt  grm_7.txt  grm_8.txt  grm_9.txt  peg_grm_0.txt  peg_grm_1.txt  peg_grm_10.txt  peg_grm_100.txt  peg_grm_1000.txt  peg_grm_1001.txt  peg_grm_1002.txt  peg_grm_1003.txt  peg_grm_1004.txt  peg_grm_1005.txt  peg_grm_1006.txt  peg_grm_1007.txt  peg_grm_1008.txt  peg_grm_1009.txt  peg_grm_101.txt  peg_grm_1010.txt  peg_grm_1011.txt  peg_grm_1012.txt  peg_grm_1013.txt  peg_grm_1014.txt  peg_grm_1015.txt  peg_grm_1016.txt  peg_grm_1017.txt  peg_grm_1018.txt  peg_grm_1019.txt  peg_grm_102.txt  peg_grm_1020.txt  peg_grm_1021.txt  peg_grm_1022.txt  peg_grm_1023.txt  peg_grm_1024.txt  (+9955 more)
