cabal-version:      3.0
name:               peg
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Rodrigo Ribeiro
maintainer:         rodrigogribeiro@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  ParserExpression,
                      VM,
                      Compiler,
                      PEGLexer,
                      PEGParser,
                      PEGTypeInfer
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      megaparsec,
                      parser-combinators,
                      containers,
                      process,
                      sexpr-parser,
                      array,
                      mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable peg
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        megaparsec,
        parser-combinators,
        containers,
        process,
        sexpr-parser,
        mtl,
        peg

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite peg-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        peg
